<resources>
    <string name="app_name">MyLeagueMvp</string>
    <string name="txt_title">List of League</string>
    <string name="btm_nav_league">League</string>
    <string name="btm_nav_schedule">Schedule</string>
    <string name="btm_nav_favorite">Favorite</string>
    <string name="txt_list_of_leagues">List of League</string>

    <string name="txt_list_of_leagues_event">List of League Events</string>
    <string name="txt_btm_favorite_title">List of Favorite</string>
    <string name="todo">Image To Do</string>
    <string name="txt_barcelona">Barcelona</string>
    <string name="txt_0">0</string>
    <string name="vs">VS</string>
    <string name="txt_real_madrid">Real Madrid</string>
    <string name="txt_15_00">15 : 00</string>
    <string name="txt_monday_20_july_2019">Monday, 20 July 2019</string>
    <string name="search">Search</string>
    <string name="detail_league_name">League Name</string>
    <string name="txt_first_event">First Event</string>
    <string name="txt_double_dot"> : </string>
    <string name="txt_estabilished">Estabilished </string>
    <string name="txt_2109">2019</string>
    <string name="txt_description">Description</string>
    <string name="txt_season">Season : </string>
    <string name="txt_date_and_time_event">Date And Time : </string>
    <string name="txt_min">-</string>
    <string name="txt_score">Score : </string>
    <string name="txt_event_match">Match Event : </string>
    <string name="event_league_name">League Name</string>
    <string name="txt_yet_match">THIS MATCH DOESN\'T YET BEGIN</string>
    <string name="txt_search_match">Search Match</string>
    <string name="txt_nothing_favorite_data">Nothing Favorite Data</string>
    <string name="btn_nav_team">Team</string>
    <string name="txt_list_of_team">List of Teams</string>
    <string name="txt_team_name">Team Name</string>
    <string name="txt_league">Team League </string>
    <string name="txt_search_team">Search Team</string>
    <string name="btn_nav_standing">Standings</string>
    <string name="txt_klasemen">Match standings</string>
    <string name="txt_played">PLAYED</string>
    <string name="txt_win">WIN</string>
    <string name="txt_lost">LOST</string>
    <string name="txt_draw">DRAW</string>
    <string name="txt_goal">GOAL</string>
    <string name="txt_goal_again">GOAL AGAIN</string>
    <string name="txtk_score">SCORE</string>

    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <string-array name="league_badge">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </string-array>

    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Protugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <string-array name="league_des">
        <item>
            "The Premier League (often referred to as the English Premier League (EPL) outside England), is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League (EFL).
            "
        </item>
        <item>
            "Ligue 1 (French pronunciation: ​; League 1, formerly known as Division 1), is the French professional league for association football clubs. It is the country's primary football competition and serves as the top division of the French football league system.
            "
        </item>
        <item>
            "The Fußball-Bundesliga (English: Football Federal League), commonly known as the Bundesliga, is a professional association football league in Germany and the football league with the highest average stadium attendance worldwide.
            "
        </item>
        <item>
            "Serie A, also called Serie A TIM due to sponsorship by Telecom Italia, is a professional league competition for football clubs located at the top of the Italian football league system and has been operating for over eighty years since the 1929–30 season.
            "
        </item>
        <item>
            "The Primera División, commonly known as La Liga and as La Liga Santander for sponsorship reasons, is the top professional association football division of the Spanish football league system.
            "
        </item>
        <item>
            "Major League Soccer (MLS) is a professional soccer league representing the sport's highest level in both the United States and Canada. MLS constitutes one of the major professional sports leagues of the United States and Canada.
            "
        </item>
        <item>
            "The Primeira Liga (First League; Portuguese pronunciation: ), formerly called Primeira Divisão), is the top professional association football division of the Portuguese football league system.
            "
        </item>
        <item>
            "The A-League is a professional men's soccer league, run by Football Federation Australia (FFA). At the top of the Australian league system, it is the country's primary competition for the sport.
            "
        </item>
        <item>
            "The Scottish Premiership is the top division of the Scottish Professional Football League, the league competition for professional football clubs in Scotland. The Scottish Premiership was established in July 2013, after the Scottish Professional Football League was formed by a merger of the Scottish Premier League and Scottish Football League.
            "
        </item>
        <item>
            "Football League One (often referred to as League One for short or Sky Bet League 1) is the second-highest division of the Football League and the third tier in the English football league system.
            "
        </item>

    </string-array>


</resources>
