<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvk_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:maxLines="1"
            android:text="@string/txt_real_madrid"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/txt_played"
                    android:layout_column="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_played"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txt_win"
                    android:layout_column="2"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_win"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txt_lost"
                    android:layout_column="3"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_lost"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txt_draw"
                    android:layout_column="4"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_draw"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txt_goal"
                    android:layout_column="5"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_goal"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txt_goal_diff"
                    android:layout_column="6"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_goal_again"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/txt_score"
                    android:layout_column="7"
                    android:layout_marginStart="8dp"
                    android:text="@string/txtk_score"
                    android:textColor="@color/colorWhite" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvk_played"
                    android:layout_column="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvk_win"
                    android:layout_column="2"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvk_lost"
                    android:layout_column="3"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvk_draw"
                    android:layout_column="4"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvk_goal"
                    android:layout_column="5"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvk_goal_again"
                    android:layout_column="6"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvk_score"
                    android:layout_column="7"
                    android:layout_marginStart="8dp"
                    android:text="@string/txt_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>