<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_match_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_monday_20_july_2019"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_match_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_15_00"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_date" />

        <TextView
            android:id="@+id/tv_match_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="90dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/txt_barcelona"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_match_vs"
            app:layout_constraintTop_toBottomOf="@id/tv_match_time" />

        <TextView
            android:id="@+id/tv_score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_0"
            app:layout_constraintLeft_toRightOf="@id/tv_match_home"
            app:layout_constraintRight_toLeftOf="@id/tv_match_vs"
            app:layout_constraintTop_toTopOf="@id/tv_match_home" />


        <TextView
            android:id="@+id/tv_match_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_time" />

        <TextView
            android:id="@+id/tv_score_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_0"
            app:layout_constraintLeft_toRightOf="@id/tv_match_vs"
            app:layout_constraintRight_toLeftOf="@id/tv_match_away"
            app:layout_constraintTop_toTopOf="@id/tv_match_away" />

        <TextView
            android:id="@+id/tv_match_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="90dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/txt_real_madrid"
            app:layout_constraintLeft_toRightOf="@id/tv_match_vs"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_match_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
