<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".view.activity.DetailLeagueActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_league_detail"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:contentDescription="@string/todo"
            android:padding="@dimen/activity_vertical_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_league_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/detail_league_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_league_detail" />

        <TableLayout
            android:id="@+id/tb_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_league_name">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:minHeight="20dp">

                <TextView
                    android:layout_column="1"
                    android:text="@string/txt_first_event"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_column="2"
                    android:text="@string/txt_double_dot"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_first_event"
                    android:layout_column="3"
                    android:layout_marginStart="5dp"
                    android:text="@string/txt_first_event"
                    android:textColor="@color/colorWhite" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:minHeight="20dp">

                <TextView

                    android:layout_column="1"
                    android:text="@string/txt_estabilished"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_column="2"
                    android:text="@string/txt_double_dot"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_estabilished"
                    android:layout_column="3"
                    android:layout_marginStart="5dp"
                    android:text="@string/txt_2109"
                    android:textColor="@color/colorWhite" />


            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/txt_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_description"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tb_layout" />

        <TextView
            android:id="@+id/tv_league_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txt_des" />

        <ProgressBar
            android:id="@+id/pb_detail_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>